# frappe_tweaks

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INDEX.md  MONKEYPATCH_MIGRATION.md  MONKEYPATCH_SUMMARY.md  README.md  TESTING_GUIDE.md  package.json  pyproject.toml
.agents/skills/: README.md
.github/: copilot-instructions.md
.github/helper/: install.sh
.github/instructions/: SYNC_JOB.instructions.md  ac-rule.instructions.md  open-observe-api.instructions.md  sync-job.instructions.md  todo.instructions.md
.github/prompts/: plan-integrate-ac-rules-with-workflow-actions.prompt.md
.github/scripts/: install.sh
.github/skills/: README.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  tests.yml
docs/: ac-rule-system.md  api-review.yaml  skills.md  test_workflow_ac_rules.md  typst_duckdb_utilities.md
docs/todo/: README.md
scripts/: common.sh
spa/: nuxt.config.ts  package.json
tweaks/: __init__.py  hooks.py  modules.txt  patches.txt
tweaks/custom/: patches.py
tweaks/locale/: es_PE.po  main.pot
tweaks/tests/: __init__.py  test_async_task.py  test_changelog.py  test_document_review_utils.py  test_duckdb.py  test_typst.py  test_typst_print.py  test_workflow_ac_rules.py
tweaks/translations/: es-PE.csv
tweaks/utils/: __init__.py  access_control.py  async_task.py  bulk_action.py  changelog.py  concurrent.py  document_review.py  duckdb.py  groupby.py  modules.py  preflight.py  query_report.py  report.py  report_long_polling.py  safe_exec.py  sync_job.py  sync_job_type.py  typst.py  typst_print.py  typst_print_setup.py  (+1 more)
(+377 files in other folders)
