[project]
name = "tweaks"
authors = [
    { name = "Erick W.R.", email = "erickkwr@gmail.com"}
]
description = "Tweaks for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.0.0,<4.0.0",  # Required by pandas for reading Excel files
    "duckdb>=0.10.0",  # For in-memory SQL database operations
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
